--- a/templates/default/add_zone_slave.html
+++ b/templates/default/add_zone_slave.html
@@ -1,7 +1,13 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
-        <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
+        <li class="breadcrumb-item">
+        {% if is_reverse_zone %}
+        <a href="index.php?page=list_reverse_zones">{% trans %}Reverse Zones{% endtrans %}</a>
+        {% else %}
+        <a href="index.php?page=list_forward_zones">{% trans %}Forward Zones{% endtrans %}</a>
+        {% endif %}
+    </li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}Add slave zone{% endtrans %}</li>
     </ol>
 </nav>
@@ -62,7 +68,7 @@
                         <button class="btn btn-primary btn-sm" type="submit" name="submit">
                             <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add zone{% endtrans %}
                         </button>
-                        <a href="index.php?page=list_zones" class="btn btn-secondary btn-sm">
+                        <a href="index.php?page=list_forward_zones" class="btn btn-secondary btn-sm">
                             <i class="bi bi-x-circle me-1 text-white"></i>{% trans %}Cancel{% endtrans %}
                         </a>
                     </div>
