--- a/templates/default/bulk_registration.html
+++ b/templates/default/bulk_registration.html
@@ -1,7 +1,13 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
-        <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
+        <li class="breadcrumb-item">
+        {% if is_reverse_zone %}
+        <a href="index.php?page=list_reverse_zones">{% trans %}Reverse Zones{% endtrans %}</a>
+        {% else %}
+        <a href="index.php?page=list_forward_zones">{% trans %}Forward Zones{% endtrans %}</a>
+        {% endif %}
+    </li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}Bulk registration{% endtrans %}</li>
     </ol>
 </nav>
@@ -72,7 +78,7 @@
 
                     <div class="mb-3">
                         <button type="submit" class="btn btn-sm btn-primary" name="submit">{% trans %}Add Zones{% endtrans %}</button>
-                        <a href="index.php?page=list_zones" class="btn btn-sm btn-secondary">{% trans %}Cancel{% endtrans %}</a>
+                        <a href="index.php?page=list_forward_zones" class="btn btn-sm btn-secondary">{% trans %}Cancel{% endtrans %}</a>
                     </div>
                 </div>
 
