--- a/templates/default/delete_records.html
+++ b/templates/default/delete_records.html
@@ -2,7 +2,13 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         {% if zone_id %}
-        <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
+        <li class="breadcrumb-item">
+        {% if is_reverse_zone %}
+        <a href="index.php?page=list_reverse_zones">{% trans %}Reverse Zones{% endtrans %}</a>
+        {% else %}
+        <a href="index.php?page=list_forward_zones">{% trans %}Forward Zones{% endtrans %}</a>
+        {% endif %}
+    </li>
         <li class="breadcrumb-item"><a href="index.php?page=edit&id={{ zone_id }}">{% trans %}Edit zone{% endtrans %}</a></li>
         {% else %}
         <li class="breadcrumb-item"><a href="index.php?page=search">{% trans %}Search{% endtrans %}</a></li>
