--- a/templates/default/list_forward_zones.html
+++ b/templates/default/list_forward_zones.html
@@ -1,6 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
+        <li class="breadcrumb-item">{% trans %}Zones{% endtrans %}</li>
         <li class="breadcrumb-item active" aria-current="page">{% trans %}Forward Zones{% endtrans %}</li>
     </ol>
 </nav>
