style: add shadow and margin to cards for consistent UI, closes #673

--- a/install/templates/step5.html.twig
+++ b/install/templates/step5.html.twig
@@ -3,7 +3,7 @@
 {% block step_description %}{% trans %}Setup account and nameservers{% endtrans %}{% endblock %}
 
 {% block content %}
-    <div class="card">
+    <div class="card shadow-sm mb-4">
         <div class="card-header bg-secondary text-white">
             {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Setup account and name servers{% endtrans %}
         </div>
