--- a/templates/default/bulk_registration.html
+++ b/templates/default/bulk_registration.html
@@ -16,7 +16,7 @@
 <div class="alert alert-{{ message.type }}">{{ message.content }}</div>
 {% endif %}
 
-<div class="card">
+<div class="card shadow-sm mb-4">
     <div class="card-header">
         <strong>{% trans %}Bulk Registration{% endtrans %}</strong>
     </div>
