--- a/install/templates/step7.html.twig
+++ b/install/templates/step7.html.twig
@@ -3,7 +3,7 @@
 {% block step_description %}{% trans %}Create configuration file{% endtrans %}{% endblock %}
 
 {% block content %}
-    <div class="card">
+    <div class="card shadow-sm mb-4">
         <div class="card-header bg-secondary text-white">
             {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Create configuration file{% endtrans %}
         </div>
