--- a/templates/default/batch_ptr_record.html
+++ b/templates/default/batch_ptr_record.html
@@ -25,7 +25,7 @@
 <div class="alert alert-{{ message.type }}">{{ message.content }}</div>
 {% endif %}
 
-<div class="card">
+<div class="card shadow-sm mb-4">
     <div class="card-header">
         <strong>{% trans %}Batch PTR Records{% endtrans %}</strong>
     </div>
