--- a/templates/default/bulk_record_add.html
+++ b/templates/default/bulk_record_add.html
@@ -23,7 +23,7 @@
 <div class="alert alert-{{ message.type }}">{{ message.content }}</div>
 {% endif %}
 
-<div class="card">
+<div class="card shadow-sm mb-4">
     <div class="card-header">
         <strong>{% trans %}Bulk Add Records{% endtrans %}</strong>
     </div>
