--- a/templates/default/change_password.html
+++ b/templates/default/change_password.html
@@ -9,7 +9,7 @@
 <div class="alert alert-{{ message.type }}">{{ message.content }}</div>
 {% endif %}
 
-<div class="card">
+<div class="card shadow-sm mb-4">
     <div class="card-header">
         <strong>{% trans %}Change Password{% endtrans %}</strong>
     </div>
