--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -34,7 +34,7 @@
             </a>
         </div>
         {% else %}
-        <form method="post" action="">
+        <form method="post" action="" id="template-records-form">
             <input type="hidden" name="_token" value="{{ csrf_token }}">
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-sm mb-0">
@@ -78,20 +78,22 @@
                     </tbody>
                 </table>
             </div>
-            <div class="card-footer py-3 d-flex justify-content-between">
-                <div>
-                    <a class="btn btn-primary btn-sm" href="index.php?page=add_zone_templ_record&id={{zone_templ_id}}">
-                        <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add record{% endtrans %}
-                    </a>
-                </div>
-                <div>
-                    <button type="submit" class="btn btn-secondary btn-sm" name="update_zones">
-                        <i class="bi bi-arrow-repeat me-1 text-white"></i>{% trans %}Update zones{% endtrans %}
-                    </button>
-                </div>
-            </div>
         </form>
-        {% endif %}
+    </div>
+    {% if records != "-1" %}
+    <div class="card-footer py-3 d-flex justify-content-between">
+        <div>
+            <a class="btn btn-primary btn-sm" href="index.php?page=add_zone_templ_record&id={{zone_templ_id}}">
+                <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add record{% endtrans %}
+            </a>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-secondary btn-sm" form="template-records-form" name="update_zones">
+                <i class="bi bi-arrow-repeat me-1 text-white"></i>{% trans %}Update zones{% endtrans %}
+            </button>
+        </div>
+    </div>
+    {% endif %}
     </div>
 </div>
 
